bk_ida/gobmkida/c1/buildSpiralOrder
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/buildSpiralOrder/src/patterns/dfa.c:615:12: error: expected expression
*( _OWORD *)&v16[j + 1821] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/buildSpiralOrder/src/patterns/dfa.c:615:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v16[j + 1821] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/buildSpiralOrder/src/patterns/dfa.c:616:12: error: expected expression
*( _OWORD *)&v16[j + 1817] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/buildSpiralOrder/src/patterns/dfa.c:616:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v16[j + 1817] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/buildSpiralOrder/src/patterns/dfa.c:617:12: error: expected expression
*( _OWORD *)&v16[j + 1813] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/buildSpiralOrder/src/patterns/dfa.c:617:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v16[j + 1813] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/buildSpiralOrder/src/patterns/dfa.c:618:12: error: expected expression
*( _OWORD *)&v16[j + 1809] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/buildSpiralOrder/src/patterns/dfa.c:618:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v16[j + 1809] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/buildSpiralOrder/src/patterns/dfa.c:619:12: error: expected expression
*( _OWORD *)&v16[j + 1805] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/buildSpiralOrder/src/patterns/dfa.c:619:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v16[j + 1805] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/buildSpiralOrder/src/patterns/dfa.c:620:12: error: expected expression
*( _OWORD *)&v16[j + 1801] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/buildSpiralOrder/src/patterns/dfa.c:620:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v16[j + 1801] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/buildSpiralOrder/src/patterns/dfa.c:621:12: error: expected expression
*( _OWORD *)&v16[j + 1797] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/buildSpiralOrder/src/patterns/dfa.c:621:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v16[j + 1797] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/buildSpiralOrder/src/patterns/dfa.c:622:12: error: expected expression
*( _OWORD *)&v16[j + 1793] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/buildSpiralOrder/src/patterns/dfa.c:622:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v16[j + 1793] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/buildSpiralOrder/src/patterns/dfa.c:623:12: error: expected expression
*( _OWORD *)&v16[j + 1789] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/buildSpiralOrder/src/patterns/dfa.c:623:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v16[j + 1789] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/buildSpiralOrder/src/patterns/dfa.c:624:12: error: expected expression
*( _OWORD *)&v16[j + 1785] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/buildSpiralOrder/src/patterns/dfa.c:624:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v16[j + 1785] = 0LL; 
   ^
20 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/buildSpiralOrder/src/obj/3/dfa.o] Error 1
